# zeronet-conservancy

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.integrated_tor  README-ja.md  README-ptbr.md  README-ru.md  README-zh-cn.md  README.md  bootstrap.url  build-docker-images.sh  build.py  buildah.sh  conftest.py  greet.py  pytest.ini  requirements-post.txt  requirements.txt  shell.nix  start-venv.sh  termux.sh  update.py  zeronet.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-installers.yml  codeql-analysis.yml  tests.yml
ZNE-ChangeLog/: ChangeLog-0.8.0.md
docker/: docker-compose.yml
plugins/AnnounceEpix/: AnnounceEpixPlugin.py  __init__.py  plugin_info.json
plugins/AnnounceLocal/: AnnounceLocalPlugin.py
plugins/AnnounceShare/: AnnounceSharePlugin.py
plugins/AnnounceZero/: AnnounceZeroPlugin.py
plugins/Benchmark/: BenchmarkDb.py  BenchmarkPack.py  BenchmarkPlugin.py
plugins/Bigfile/: BigfilePlugin.py
plugins/ChainAttestation/: ChainAttestationPlugin.py
plugins/Chart/: ChartCollector.py  ChartDb.py
plugins/ContentFilter/: ContentFilterPlugin.py  ContentFilterStorage.py
plugins/Cors/: CorsPlugin.py
plugins/CryptMessage/: CryptMessagePlugin.py
plugins/FilePack/: FilePackPlugin.py
plugins/MergerSite/: MergerSitePlugin.py
plugins/Newsfeed/: NewsfeedPlugin.py
plugins/OptionalManager/: ContentDbPlugin.py  OptionalManagerPlugin.py  (+1 more)
plugins/RizaZero/hs/: safe.cabal
plugins/RizaZero/hs/app/: Main.hs
plugins/RizaZero/hs/lib/: RizaZero.hs
src/: Actions.py  Config.py  buildinfo.py  main.py  rich.py
(+134 files in other folders)
