cabal-version:      2.4
name:               safe
version:            0.1.0.0

library ls
    exposed-modules:  RizaZero
    hs-source-dirs:   lib
    build-depends:    base ^>=4.14.3.0,
    		      lucid,
    default-language: Haskell2010

library distrusted
    exposed-modules:  App
    extensions:       Safe,
    		      FlexibleContexts,
		      OverloadedStrings,
		      ExtendedDefaultRules
    hs-source-dirs:   distrusted
    build-depends:    base ^>=4.14.3.0,
    		      ls
    default-language: Haskell2010

executable safe
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0,
    		      lucid,
		      distrusted
    hs-source-dirs:   app
    default-language: Haskell2010
